configurado ssh y Documentacion del modelo Detalle de Venta
